# truss

./: .env.example  .gitignore  LICENSE  README.md  alembic.ini  e2e.py  pyproject.toml  test.py
.plan/: hld  lld  prd  updateprd
tests/: test_agent_config_model.py  test_agent_workflow_initialization.py  test_agent_workflow_skeleton.py  test_agent_workflow_tool_execution.py  test_api_agent_configs.py  test_api_runs.py  test_api_sessions.py  test_api_signals.py  test_api_structure.py  test_data_models.py  test_integration.py  test_llm_activity.py  test_llm_activity_tool_calls.py  test_llm_client.py  test_llm_openrouter.py  test_llm_payload_serialisation.py  test_models_base.py  test_postgres_storage.py  test_run_model.py  test_run_session_model.py  test_run_step_model.py  test_settings.py  test_temporal_agent_workflow_cancellation.py  test_temporal_agent_workflow_runtime.py
truss/: __init__.py  data_models.py  run_worker.py  service.py  settings.py
truss/activities/: __init__.py  llm_activities.py  storage_activities.py  tool_activities.py
truss/api/: __init__.py  main.py
truss/core/: __init__.py  client.py  config.py  llm_client.py  logging.py  mcp_client.py  session.py
truss/core/connectors/: base.py  http.py  sandbox.py  stdio.py  utils.py  websocket.py
truss/core/models/: __init__.py  agent_config.py  base.py  mcp_server_config.py  run.py  run_session.py  run_step.py
truss/core/storage/: __init__.py
truss/core/task_managers/: sse.py  streamable_http.py
truss/migrations/: env.py
truss/workflows/: __init__.py  agent_workflow.py
